[gd_scene load_steps=22 format=3 uid="uid://btx2ixvp13h0r"]

[ext_resource type="Script" uid="uid://d12athyfc8txp" path="res://death_screen.gd" id="1_6bi5g"]
[ext_resource type="FontFile" uid="uid://f4gf616lj7hp" path="res://assets/fonts/Arista-Pro-Fat-trial.ttf" id="2_y0ggs"]
[ext_resource type="PackedScene" uid="uid://elfe5osdvmvl" path="res://exit_confirmation.tscn" id="3_hhlqb"]
[ext_resource type="Shader" uid="uid://b6sc7mm03m1jh" path="res://vignete.tres" id="4_y0ggs"]
[ext_resource type="Texture2D" uid="uid://cov260cuyltgf" path="res://assets/ui/single_ui_leave.png" id="5_hhlqb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y0ggs"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f562y"]
bg_color = Color(0, 0, 0, 0.490196)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s44ck"]
bg_color = Color(0.52549, 0.439216, 0.247059, 1)
border_width_left = 40
border_width_top = 40
border_width_right = 40
border_width_bottom = 40
border_color = Color(0.411765, 0.337255, 0.203922, 1)
corner_radius_top_left = 110
corner_radius_top_right = 110
corner_radius_bottom_right = 110
corner_radius_bottom_left = 110
corner_detail = 3

[sub_resource type="FontVariation" id="FontVariation_s44ck"]
base_font = ExtResource("2_y0ggs")
baseline_offset = 0.15

[sub_resource type="FontVariation" id="FontVariation_nus4h"]
base_font = ExtResource("2_y0ggs")
spacing_top = 15
spacing_bottom = 15
baseline_offset = 0.15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hhlqb"]
bg_color = Color(0.91, 0.901355, 0.3913, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.74, 0.731737, 0.2442, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 35.0
expand_margin_top = 10.0
expand_margin_right = 35.0
expand_margin_bottom = 10.0
shadow_color = Color(0, 0, 0, 0.247059)
shadow_size = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nus4h"]
bg_color = Color(0.98, 0.973957, 0.6174, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.82, 0.81139, 0.3034, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 25.0
expand_margin_right = 25.0
shadow_color = Color(0, 0, 0, 0.305882)
shadow_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b1ui3"]
bg_color = Color(0.81, 0.800955, 0.2673, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.63, 0.622965, 0.2079, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 25.0
expand_margin_right = 25.0
shadow_color = Color(0, 0, 0, 0.305882)
shadow_size = 20

[sub_resource type="FontVariation" id="FontVariation_iigho"]
base_font = ExtResource("2_y0ggs")
spacing_top = 15
spacing_bottom = 15
baseline_offset = 0.15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ahhq"]
bg_color = Color(0.98, 0.4018, 0.440347, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.72, 0.2592, 0.28992, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
expand_margin_left = 35.0
expand_margin_top = 10.0
expand_margin_right = 35.0
expand_margin_bottom = 10.0
shadow_color = Color(0, 0, 0, 0.247059)
shadow_size = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u708n"]
bg_color = Color(0.98, 0.5292, 0.559253, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.83, 0.3569, 0.38844, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
expand_margin_left = 25.0
expand_margin_right = 25.0
shadow_color = Color(0, 0, 0, 0.305882)
shadow_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iigho"]
bg_color = Color(0.984622, 0.254637, 0.301416, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.7, 0.21, 0.242667, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
expand_margin_left = 25.0
expand_margin_right = 25.0
shadow_color = Color(0, 0, 0, 0.305882)
shadow_size = 20

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hhlqb"]
shader = ExtResource("4_y0ggs")
shader_parameter/vignete_scale = 1.0

[sub_resource type="Gradient" id="Gradient_kdmsy"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_f562y"]
gradient = SubResource("Gradient_kdmsy")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0, 1)

[sub_resource type="FontVariation" id="FontVariation_uhhpk"]
base_font = ExtResource("2_y0ggs")
baseline_offset = 0.225

[node name="death_screen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_6bi5g")

[node name="fade_in" type="Panel" parent="."]
process_mode = 3
modulate = Color(1, 1, 1, 0.00392157)
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_y0ggs")

[node name="all_elements" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="death_screen" type="Control" parent="all_elements"]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="all_elements/death_screen"]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_f562y")

[node name="MarginContainer" type="MarginContainer" parent="all_elements/death_screen"]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 130
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 130
theme_override_constants/margin_bottom = 100

[node name="Panel" type="Panel" parent="all_elements/death_screen/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_s44ck")

[node name="VBoxContainer" type="VBoxContainer" parent="all_elements/death_screen/MarginContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = -70

[node name="Label" type="Label" parent="all_elements/death_screen/MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.54, 0.14688, 0.1188, 1)
theme_override_colors/font_shadow_color = Color(0.08, 0, 0.00133331, 0.227451)
theme_override_colors/font_outline_color = Color(0.77, 0.2002, 0.2002, 1)
theme_override_constants/shadow_offset_x = 15
theme_override_constants/shadow_offset_y = 25
theme_override_constants/outline_size = 45
theme_override_fonts/font = SubResource("FontVariation_s44ck")
theme_override_font_sizes/font_size = 110
text = "YOU DIED"

[node name="MarginContainer" type="MarginContainer" parent="all_elements/death_screen/MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 130
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 130

[node name="VBoxContainer" type="VBoxContainer" parent="all_elements/death_screen/MarginContainer/VBoxContainer/MarginContainer"]
process_mode = 3
layout_mode = 2
theme_override_constants/separation = 10

[node name="restart" type="Button" parent="all_elements/death_screen/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
focus_mode = 0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.36, 0.32436, 0.1224, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = SubResource("FontVariation_nus4h")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_hhlqb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nus4h")
theme_override_styles/normal = SubResource("StyleBoxFlat_b1ui3")
text = "RESTART"

[node name="leave" type="Button" parent="all_elements/death_screen/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
focus_mode = 0
theme_override_colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
theme_override_colors/font_outline_color = Color(0.47, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.95, 0.95, 0.95, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = SubResource("FontVariation_iigho")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_7ahhq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_u708n")
theme_override_styles/normal = SubResource("StyleBoxFlat_iigho")
text = "LEAVE"

[node name="vignete" type="TextureRect" parent="all_elements/death_screen"]
process_mode = 3
z_index = -1
material = SubResource("ShaderMaterial_hhlqb")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_f562y")

[node name="exit_confirmation" parent="all_elements/death_screen" instance=ExtResource("3_hhlqb")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
in_paused_menu = true

[node name="VBoxContainer" parent="all_elements/death_screen/exit_confirmation/Panel" index="0"]
theme_override_constants/separation = 25

[node name="exit_question" parent="all_elements/death_screen/exit_confirmation/Panel/VBoxContainer" index="0"]
theme_override_fonts/font = SubResource("FontVariation_uhhpk")
text = "Are you sure
 you want to leave?"

[node name="HBoxContainer" parent="all_elements/death_screen/exit_confirmation/Panel/VBoxContainer" index="1"]
size_flags_vertical = 4
mouse_filter = 2

[node name="leaves" type="Control" parent="all_elements"]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="all_elements/leaves"]
modulate = Color(0.462745, 0.301961, 0.196078, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0182292
anchor_top = 0.58735
anchor_right = 0.0182292
anchor_bottom = 0.58735
offset_left = 92.0
offset_top = -38.0
offset_right = 288.0
offset_bottom = 178.0
grow_vertical = 2
rotation = -0.156778
texture = ExtResource("5_hhlqb")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="TextureRect2" type="TextureRect" parent="all_elements/leaves"]
modulate = Color(0.462745, 0.301961, 0.196078, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0182292
anchor_top = 0.58735
anchor_right = 0.0182292
anchor_bottom = 0.58735
offset_left = 175.0
offset_top = -42.0
offset_right = 371.0
offset_bottom = 174.0
grow_vertical = 2
rotation = 0.336598
scale = Vector2(1.21647, 1.03933)
texture = ExtResource("5_hhlqb")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="leaves2" type="Control" parent="all_elements"]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="all_elements/leaves2"]
modulate = Color(0.462745, 0.301961, 0.196078, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.762708
anchor_top = 0.892696
anchor_right = 0.762708
anchor_bottom = 0.892696
offset_left = 92.0
offset_top = -38.0
offset_right = 288.0
offset_bottom = 178.0
grow_vertical = 2
rotation = -2.8874
scale = Vector2(1.46883, 1.46883)
texture = ExtResource("5_hhlqb")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="TextureRect2" type="TextureRect" parent="all_elements/leaves2"]
modulate = Color(0.462745, 0.301961, 0.196078, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.840833
anchor_top = 0.671404
anchor_right = 0.840833
anchor_bottom = 0.671404
offset_left = 175.0
offset_top = -42.0
offset_right = 371.0
offset_bottom = 174.0
grow_vertical = 2
rotation = 2.32033
scale = Vector2(1.21647, 1.03933)
texture = ExtResource("5_hhlqb")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="all_elements/death_screen/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="all_elements/death_screen/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/leave" to="." method="_on_leave_button_down"]

[editable path="all_elements/death_screen/exit_confirmation"]
